--- a/packages/theme/styles/_variables-bootstrap.scss
+++ b/packages/theme/styles/_variables-bootstrap.scss
@@ -335,7 +335,7 @@ $escaped-characters: (("<", "%3c"), (">", "%3e"), ("#", "%23"), ("(", "%28"), ("
 
 $enable-caret: true;
 $enable-rounded: true;
-$enable-shadows: true;
+$enable-shadows: false;
 $enable-gradients: false;
 $enable-transitions: true;
 $enable-reduced-motion: true;
